{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 18,
  "lineage": "980db98a-ece8-88e6-5075-a3d14f3000a3",
  "resources": [
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035b3c7efe6d061d5",
            "arn": "arn:aws:ec2:us-east-1:691738260485:instance/i-0364cf9c522d5686d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0364cf9c522d5686d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_devops",
            "monitoring": false,
            "primary_network_interface_id": "eni-05011b037536b1750",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_ip": "10.0.1.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07747d7607854cec9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f842321491f576d2",
            "tags": {
              "Name": "ec2_devops"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02acd586a256ef016",
              "sg-0452812f1c906c069"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "idw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e2054307d57fb590",
            "owner_id": "691738260485",
            "tags": {
              "Name": "igw_devops"
            },
            "vpc_id": "vpc-0f78672afc387ffb6"
          },
          "depends_on": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e2054307d57fb590",
            "id": "r-rtb-0d5456dc88ae67def1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5456dc88ae67def",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.idw",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_22_scg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691738260485:security-group/sg-0452812f1c906c069",
            "description": "Allow port 22inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0452812f1c906c069",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops_22_scg",
            "name_prefix": null,
            "owner_id": "691738260485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_22_scg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f78672afc387ffb6"
          }
        }
      ]
    },
    {
      "module": "module.sg_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_80_scg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691738260485:security-group/sg-02acd586a256ef016",
            "description": "Allow port 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-02acd586a256ef016",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops_80_scg",
            "name_prefix": null,
            "owner_id": "691738260485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_80_scg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f78672afc387ffb6"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691738260485:subnet/subnet-0f842321491f576d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f842321491f576d2",
            "map_public_ip_on_launch": false,
            "owner_id": "691738260485",
            "tags": {
              "Name": "sub_public_devops"
            },
            "vpc_id": "vpc-0f78672afc387ffb6"
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:691738260485:vpc/vpc-0f78672afc387ffb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cdbaa800582e057",
            "default_route_table_id": "rtb-0d5456dc88ae67def",
            "default_security_group_id": "sg-0ca6278de6bc1113e",
            "dhcp_options_id": "dopt-fa3b2681",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f78672afc387ffb6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5456dc88ae67def",
            "owner_id": "691738260485",
            "tags": {
              "Name": "vpc_devops"
            }
          }
        }
      ]
    }
  ]
}